Hot fix.  Canvas not showing up on dashboard

--- a/public/timeline_heatmap.less
+++ b/public/timeline_heatmap.less
@@ -1,3 +1,4 @@
 #timeline-heatmap {
   position: relative;
+  z-index: 10;
 }
